Additional fix on draws screen to eliminate excessive gap between rows of group draws

--- a/client/src/app/draws/draws-config/draws/draws.component.scss
+++ b/client/src/app/draws/draws-config/draws/draws.component.scss
@@ -12,7 +12,9 @@ h2 {
 }
 
 mat-toolbar {
-  min-width: calc(100vw - 440px);
+  //min-width: calc(100vw - 500px);
+  //max-width: calc(100vw - 500px);
+  width: 100%;
 }
 
 .event-list {
